<resources>
    <string name="app_name">Splash Screen</string>
    <string name="signup_text">Don\'t have an account? <u>Sign up</u></string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="login_header">Login</string>
    <string name="sign_in">Sign In</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="sign_up">Sign Up</string>
</resources>