<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".RegisterActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp"
        android:background="@drawable/custom_edittext">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:padding="24dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sign_up"
                android:textStyle="bold"
                android:textAlignment="center"
                android:textSize="36sp"
                android:textColor="@color/purple"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/editName"
                android:hint="@string/name"
                android:drawableStart="@drawable/ic_baseline_people_24"
                android:layout_marginTop="40dp"
                android:drawablePadding="8dp"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textColorHighlight="@color/cardview_dark_background"
                android:background="@drawable/custom_edittext"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/editEmail"
                android:hint="@string/email"
                android:layout_marginTop="40dp"
                android:drawablePadding="8dp"
                android:padding="8dp"
                android:drawableStart="@drawable/ic_baseline_email_24"
                android:textColor="@color/black"
                android:textColorHighlight="@color/cardview_dark_background"
                android:background="@drawable/custom_edittext"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/username"
                android:hint="@string/username"
                android:layout_marginTop="40dp"
                android:drawablePadding="8dp"
                android:padding="8dp"
                android:drawableStart="@drawable/ic_baseline_person_24"
                android:textColor="@color/black"
                android:textColorHighlight="@color/cardview_dark_background"
                android:background="@drawable/custom_edittext"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/password"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="8dp"
                android:drawablePadding="8dp"
                android:drawableStart="@drawable/ic_baseline_lock_24"
                android:textColor="@color/black"
                android:textColorHighlight="@color/cardview_dark_background"
                android:layout_marginTop="40dp"
                android:background="@drawable/custom_edittext"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:id="@+id/signupBtn"
                android:text="@string/sign_up"
                android:textSize="18sp"
                android:layout_marginTop="30dp"
                android:backgroundTint="@color/purple"
                app:cornerRadius = "20dp"/>

        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <TextView
        android:id="@+id/signInText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:textColor="@color/purple"
        android:background="@drawable/text_hover_effect"
        android:padding="8dp"
        android:textSize="14sp"
        android:layout_marginBottom="20dp"
        android:clickable="true"
        android:focusable="true"/>

</LinearLayout>